--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-click==8.1.3
 Flask==2.2.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
 line-bot-sdk==2.3.0
-MarkupSafe==2.1.1
 requests==2.28.1
-Werkzeug==2.2.2
+gunicorn==20.1.0
